package com.youkeda.application.art.member.exception;

/**
 * 密码错误异常
 */
public class UserPwdErrorException extends Exception {

}
